# micro-notif

./: .gitignore  README.md  deploy.sh  docker-compose.override.yml.example  docker-compose.yml  release.sh
.github/workflows/: build.yml
micro_notif/: .env.example  Dockerfile  README.md  entrypoint.sh  prod.env.example  pyproject.toml
micro_notif/micro_notif/: main.py  settings.py  utils.py
micro_notif/micro_notif/events/: __init__.py
micro_notif/micro_notif/events/v1/: __init__.py  notify.py
micro_notif/micro_notif/notifiers/: __init__.py  utils.py
micro_notif/micro_notif/notifiers/sms/: __init__.py  base.py  kavenegar.py
micro_notif/micro_notif/schemas/: __init__.py  sms.py
